[package]
name = "md2html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
gh-emoji = "1.0.8"
pulldown-cmark = { git = "https://github.com/raphlinus/pulldown-cmark.git", branch = "master" }
