[package]
name = "md2html"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gh-emoji = "1.0.8"
pico-args = { version = "0.5.0", features = ["combined-flags"] }
pulldown-cmark = { git = "https://github.com/raphlinus/pulldown-cmark.git", branch = "master", default-features = false, features = ["html", "pulldown-cmark-escape"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true
